--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,144 +31,123 @@
 	font-style: italic;
 	font-weight: bold;
 }
-
+  
 body {
-	font-size: 1.125em;
+	font-size: 1em;
 	margin: 0;
-	padding: 1.2em;
-	font-family: "Atkinson Hyperlegible";
-	background: linear-gradient(135deg, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1));
+	padding: 1.125em;
+	font-family: 'Atkinson Hyperlegible';
+	background: linear-gradient(135deg, #9ecde6, #84fab0);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	height: 100%;
 	overflow-wrap: break-word;
+  }
+  
+.holder {
+	width: 700px;
 }
 
-main {
+.sidebar {
+	float: left;
+	z-index: 1;
+	width: 175px;
+	background: #ffffff80;
+	text-align: center;
+	border-radius: 10px;
+	position: sticky !important;
+	top: 10px;
+	overflow: hidden;
+}
+
+.main, .credits, .soon {
 	box-sizing: border-box;
 	display: block;
-	max-width: 450px;
-	border-radius: 30px;
-	margin: 0 auto;
+	max-width: 500px;
+	border-radius: 10px;
+	text-align: left;
+	background: #ffffff80;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-right: 25px;
+	padding-left: 25px;
+}
+
+.main {
+	margin-left: 200px;
+	margin-right: 30px;
+}
+
+.soon {
 	text-align: center;
-	background: rgba(255, 255, 255, .5);
-	padding-top: 40px;
-	padding-bottom: 25px;
-	padding-right: 30px;
-	padding-left: 30px;
 }
-
-.left {
-	margin-top: 2.5em;
-	text-align: left !important;
-	line-height: 120%;
-}
-
+  
 .center {
 	text-align: center !important;
 }
 
-li {
-	line-height: 140%;
+.top {
+	font-size: 0.85em;
+	line-height: 1.2em;
+	text-align: center;
+}
+	
+.contents {
+	font-size: 0.85em;
+	line-height: 1.2em;
+	text-align: left;
+	display: inline-block;
+}
+	
+.tiny {
+	font-size: 12px;
+	margin-top: 2em;
+	text-align: center;
 }
 
-a:link,
-a:visited {
-	color: #000;
-	text-decoration-color: #555;
-	text-decoration: none;
-	border-bottom: 2px dotted #000;
+a:link {
+	color: #124556;
+	text-decoration: underline;
 }
+
 a:hover,
-a:active {
-	color: #000;
-	text-decoration-color: #000;
-	text-decoration: none;
-	border-bottom: 2px solid #000;
+a:active,
+a:visited {
+	color: #0d664f;
+	text-decoration: underline;
 }
 
 hr {
-	border-top: dotted 2px #000;
+	border-top: dotted 1px #124556;
 	border-bottom: 0;
 	border-left: 0;
 	border-right: 0;
 	background-color: transparent;
-	margin: 30px 0;
-}
-
-.circle {
-  border-radius: 50%;
-  width: 200px;
-  height: 200px;
-  padding: 10px 10px;
-}
-
-.top {
-  	line-height: 150%;
-}
-
-.small {
-  font-size: 14px;
-  text-transform: lowercase;
-}
-
-.tiny {
-  font-size: 12px;
-  margin-top: 2em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 24px;
-  font-weight: bold;
+	width: 80%;
 }
 
 h1 {
-  font-size: 1.375em; /* 22px --> 22 ÷ 16 = 1.375 */
-  line-height: 1.0909em; /* 24px --> 24 ÷ 22 = 1.0909 */
+	margin-bottom: 24px;
+	font-weight: bold;
+	font-size: 1.375em; /* 22px --> 22 ÷ 16 = 1.375 */
+	line-height: 1.0909em; /* 24px --> 24 ÷ 22 = 1.0909 */
 }
-  
+
 h2 {
-  font-size: 1.25em; /* 20px --> 20 ÷ 16 = 1.25 */
-  line-height: 1.2em; /* 24px --> 24 ÷ 20 = 1.2 */
+	margin-top: 24px;
+	font-weight: bold;
+	font-size: 1.25em; /* 20px --> 20 ÷ 16 = 1.25 */
+	line-height: 1.2em; /* 24px --> 24 ÷ 20 = 1.2 */
 }
 
-.flags {
-	border-radius: 6px;
-	width: 24px;
-	height: 18px;
-	filter: brightness(110%);
-}
-
-img {
-  max-width: 100%;
-  border-radius: 5px;
-}
-
-.no-round {
+.round {
 	max-width: 100%;
-	border-radius: 0px;
+	border-radius: 5px;
 }
 
-blockquote {
-	margin-left: 25px;
-	padding-left: 10px;
-	background: transparent;
-}
-
-blockquote:before {
-color: #555;
-content: "“";
-font-size: 2.5em;
-line-height: 0.0em;
-margin-right: 0.2em;
-vertical-align: -0.4em;
-}
-
-blockquote:after {
-color: #555;
-content: "”";
-font-size: 2.5em;
-line-height: 0.0em;
-margin-left: 0.2em;
-vertical-align: -0.4em;
+.circle {
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	padding: 10px 10px;
 }
