--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,6 +46,7 @@ body {
   
 .holder {
 	width: 700px;
+	margin: auto;
 }
 
 .sidebar {
@@ -73,6 +74,10 @@ body {
 	padding-left: 25px;
 }
 
+.credits {
+	margin: auto;
+}
+
 .main {
 	margin-left: 200px;
 	margin-right: 30px;
@@ -80,10 +85,11 @@ body {
 
 .soon {
 	text-align: center;
+	margin: auto;
 }
   
 .center {
-	text-align: center !important;
+	text-align: center;
 }
 
 .top {
