--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,11 +41,13 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	overflow-wrap: break-word;
+	height:100vh;
   }
   
 .holder {
 	width: 700px;
 	margin: auto;
+	padding-bottom: 20px;
 }
 
 .sidebar {
