--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,12 +37,13 @@ body {
 	margin: 0;
 	padding: 1.125em;
 	font-family: 'Atkinson Hyperlegible';
-	background: linear-gradient(135deg, #9ecde6, #84fab0);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background: linear-gradient(135deg, #9ecde6, #84fab0) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
 	overflow-wrap: break-word;
-	height: 100vh;
-	width: 100vw;
   }
   
 .holder {
