--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,44 +46,91 @@ body {
 	overflow-wrap: break-word;
   }
   
-.holder {
-	width: 700px;
-	margin: auto;
-	padding-bottom: 20px;
+
+@media only screen and (max-width: 700px) {
+	.holder {
+		width: 450px;
+		margin: auto;
+	}
+
+	.sidebar {
+		max-width: 450px;
+		background: #ffffff80;
+		text-align: center;
+		border-radius: 10px;
+		margin-bottom: 10px;
+		padding: 10px;
+	}
+	
+	.main, .credits, .soon {
+		box-sizing: border-box;
+		display: block;
+		max-width: 450px;
+		border-radius: 10px;
+		text-align: left;
+		background: #ffffff80;
+		padding-bottom: 10px;
+		padding-top: 10px;
+		padding-right: 25px;
+		padding-left: 25px;
+		border-radius: 10px;
+	}
+
+	.contents {
+		display: none;
+	}
+	
 }
 
-.sidebar {
-	float: left;
-	z-index: 1;
-	width: 175px;
-	background: #ffffff80;
-	text-align: center;
-	border-radius: 10px;
-	position: sticky !important;
-	top: 10px;
-	overflow: hidden;
-}
+@media only screen and (min-width: 700px) {
 
-.main, .credits, .soon {
-	box-sizing: border-box;
-	display: block;
-	max-width: 500px;
-	border-radius: 10px;
-	text-align: left;
-	background: #ffffff80;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-right: 25px;
-	padding-left: 25px;
-}
+	.holder {
+		width: 700px;
+		margin: auto;
+		padding-bottom: 20px;
+	}
+
+	.sidebar {
+		float: left;
+		z-index: 1;
+		width: 175px;
+		background: #ffffff80;
+		text-align: center;
+		border-radius: 10px;
+		position: sticky !important;
+		top: 10px;
+		overflow: hidden;
+	}
+	
+	.main, .credits, .soon {
+		box-sizing: border-box;
+		display: block;
+		max-width: 500px;
+		border-radius: 10px;
+		text-align: left;
+		background: #ffffff80;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-right: 25px;
+		padding-left: 25px;
+	}
+	
+	.main {
+		margin-left: 200px;
+		margin-right: 30px;
+	}
+
+	.contents {
+		font-size: 0.85em;
+		line-height: 1.2em;
+		text-align: left;
+		display: inline-block;
+	}
+
+  }
 
 .credits {
 	margin: auto;
-}
-
-.main {
-	margin-left: 200px;
-	margin-right: 30px;
 }
 
 .soon {
@@ -99,13 +146,6 @@ body {
 	font-size: 0.85em;
 	line-height: 1.2em;
 	text-align: center;
-}
-	
-.contents {
-	font-size: 0.85em;
-	line-height: 1.2em;
-	text-align: left;
-	display: inline-block;
 }
 	
 .tiny {
