--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,29 +37,35 @@ body {
 	margin: 0;
 	padding: 1.125em;
 	font-family: 'Atkinson Hyperlegible';
-	background: linear-gradient(135deg, #9ecde6, #84fab0) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
+	background: linear-gradient(135deg, #9ecde6, #84fab0);
+    background-position: center;
+ 	background-repeat: no-repeat;
+	background-size: cover;
 	overflow-wrap: break-word;
   }
   
 
 @media only screen and (max-width: 700px) {
+
+	body {
+		width: 100%;
+    	height: 100%;
+	}
+
 	.holder {
 		width: 450px;
 		margin: auto;
+		text-align: center;
 	}
 
 	.sidebar {
-		max-width: 450px;
+		max-width: 300px;
 		background: #ffffff80;
 		text-align: center;
 		border-radius: 10px;
 		margin-bottom: 10px;
 		padding: 10px;
+		display: inline-block;
 	}
 	
 	.main, .credits, .soon {
