--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,9 +38,6 @@ body {
 	padding: 1.125em;
 	font-family: 'Atkinson Hyperlegible';
 	background: linear-gradient(135deg, #9ecde6, #84fab0);
-    background-position: center;
- 	background-repeat: no-repeat;
-	background-size: cover;
 	overflow-wrap: break-word;
   }
   
@@ -50,12 +47,17 @@ body {
 	body {
 		width: 100%;
     	height: 100%;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
 	}
 
 	.holder {
 		width: 450px;
 		margin: auto;
 		text-align: center;
+		padding: 10px;
 	}
 
 	.sidebar {
@@ -89,6 +91,13 @@ body {
 }
 
 @media only screen and (min-width: 700px) {
+
+	body {
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
+	}
 
 	.holder {
 		width: 700px;
