--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,35 +38,36 @@ body {
 	padding: 1.125em;
 	font-family: 'Atkinson Hyperlegible';
 	background: linear-gradient(135deg, #9ecde6, #84fab0);
-	overflow-wrap: break-word;
+	width: 100%;
+	height: 100%;
+	background-repeat:no-repeat;
+	background-position: center center;
+	background-attachment:fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
   }
   
 
 @media only screen and (max-width: 700px) {
 
-	body {
-		width: 100%;
-    	height: 100%;
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-attachment: fixed;
-	}
-
 	.holder {
 		width: 450px;
 		margin: auto;
 		text-align: center;
+	}
+
+	.sidebar, .main, .credits, .soon {
+		background: #ffffff80;
+		border-radius: 10px;
 		padding: 10px;
 	}
 
 	.sidebar {
 		max-width: 300px;
-		background: #ffffff80;
 		text-align: center;
-		border-radius: 10px;
 		margin-bottom: 10px;
-		padding: 10px;
 		display: inline-block;
 	}
 	
@@ -74,14 +75,11 @@ body {
 		box-sizing: border-box;
 		display: block;
 		max-width: 450px;
-		border-radius: 10px;
 		text-align: left;
-		background: #ffffff80;
 		padding-bottom: 10px;
 		padding-top: 10px;
 		padding-right: 25px;
 		padding-left: 25px;
-		border-radius: 10px;
 	}
 
 	.contents {
@@ -91,13 +89,6 @@ body {
 }
 
 @media only screen and (min-width: 700px) {
-
-	body {
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-attachment: fixed;
-	}
 
 	.holder {
 		width: 700px;
